adding traffic split to serving

--- a/pipeline_definition.ipynb
+++ b/pipeline_definition.ipynb
@@ -3,46 +3,40 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3699fa3a",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import kfp\n",
     "from kfp.v2.dsl import component\n",
     "import google.cloud.aiplatform as aip"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fb3a36f6",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "BUCKET_NAME=\"gs://garrido-ml-models\"\n",
     "REGION=\"us-central1\"\n",
     "PIPELINE_ROOT = f\"{BUCKET_NAME}/pipeline_root/\"\n",
     "PROJECT_ID=\"ml-demos-garrido\""
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "db7074f4",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "from datetime import datetime\n",
     "\n",
     "TIMESTAMP = datetime.now().strftime(\"%Y%m%d%H%M%S\")"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "bfe2b42e",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "@kfp.dsl.pipeline(name=\"r-model-iris-pipeline\")\n",
     "def pipeline(\n",
@@ -94,28 +88,19 @@
     "        endpoint=endpoint_create_op.outputs[\"endpoint\"],\n",
     "        model=model_upload_op.outputs[\"model\"],\n",
     "        deployed_model_display_name=model_display_name,\n",
+    "        traffic_split={\"0\":100}\n",
     "        service_account=\"mlops-services@ml-demos-garrido.iam.gserviceaccount.com\",\n",
     "        dedicated_resources_machine_type=\"n1-standard-16\",\n",
     "        dedicated_resources_min_replica_count=1,\n",
     "        dedicated_resources_max_replica_count=1,\n",
     "    )"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6f63a343",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.7/site-packages/kfp/v2/compiler/compiler.py:1281: FutureWarning: APIs imported from the v1 namespace (e.g. kfp.dsl, kfp.components, etc) will not be supported by the v2 compiler since v2.0.0\n",
-      "  category=FutureWarning,\n"
-     ]
-    }
-   ],
    "source": [
     "from kfp.v2 import compiler  # noqa: F811\n",
     "\n",
@@ -123,17 +108,38 @@
     "    pipeline_func=pipeline,\n",
     "    package_path=\"r_model_pipeline.json\"\n",
     ")"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "/opt/conda/lib/python3.7/site-packages/kfp/v2/compiler/compiler.py:1281: FutureWarning: APIs imported from the v1 namespace (e.g. kfp.dsl, kfp.components, etc) will not be supported by the v2 compiler since v2.0.0\n",
+      "  category=FutureWarning,\n"
+     ]
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4e0031ac",
-   "metadata": {},
+   "source": [
+    "DISPLAY_NAME = \"r_model\" + TIMESTAMP\n",
+    "\n",
+    "job = aip.PipelineJob(\n",
+    "    display_name=DISPLAY_NAME,\n",
+    "    template_path=\"r_model_pipeline.json\",\n",
+    "    pipeline_root=PIPELINE_ROOT,\n",
+    "    enable_caching=False,\n",
+    ")\n",
+    "\n",
+    "job.run()"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "INFO:google.cloud.aiplatform.pipeline_jobs:Creating PipelineJob\n",
       "INFO:google.cloud.aiplatform.pipeline_jobs:PipelineJob created. Resource name: projects/462778730840/locations/us-central1/pipelineJobs/r-model-iris-pipeline-20220331182914\n",
@@ -159,26 +165,7 @@
      ]
     }
    ],
-   "source": [
-    "DISPLAY_NAME = \"r_model\" + TIMESTAMP\n",
-    "\n",
-    "job = aip.PipelineJob(\n",
-    "    display_name=DISPLAY_NAME,\n",
-    "    template_path=\"r_model_pipeline.json\",\n",
-    "    pipeline_root=PIPELINE_ROOT,\n",
-    "    enable_caching=False,\n",
-    ")\n",
-    "\n",
-    "job.run()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2e0d844a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
