starting draft of setup steps

--- a/0_setup.ipynb
+++ b/0_setup.ipynb
@@ -7,8 +7,16 @@
     "# Setup \n",
     "\n",
     "Run this notebook first for setup.\n",
-    "\n"
+    "\n",
+    "1. Create service account\n",
+    "2. Create storage bucket \n",
+    "3. Grant service account access to bucket "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
